# bezier

./: .gitignore  CMakeLists.txt  README.md  bezier.cpp  main.cpp  matrix.h  point.h  show_bezier2d.py
computational_geometry/: computational_geometry.cpp  computational_geometry.h  matrix.h  vec.h
